# rust_scheduler

./: Cargo.toml  README.md  test.db
backend/: scheduler.db
backend/src/: error.rs  main.rs  test.rs
backend/src/database/: database_functions.rs
backend/src/database/event/: event_functions.rs  event_structs.rs
backend/src/database/user/: mod.rs  token.rs  user_functions.rs  user_structs.rs
backend/src/routes/: route_all.rs
frontend/pages/: index.tsx
src/: app_state.rs  database.rs  error.rs  events.rs  main.rs  test.rs
src/database/: database_functions.rs  mod.rs
src/database/event/: event_functions.rs  event_structs.rs  mod.rs
src/database/user/: create_user.rs  mod.rs  pwd_hash.rs  user_functions.rs  user_structs.rs
src/routes/: database_routing.rs  event_routing.rs  guard.rs  mod.rs  route_all.rs  user_routing.rs
