[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

axum = {version = "0.6", features = ["macros"]}
tower-http = {version = "0.4.0", features = ["fs"]}
tower-cookies = "0.9.0"

rusqlite = "0.29.0"

anyhow = "1.0"
tokio-rusqlite = "0.4.0"

[dev-dependencies]
httpc-test = "0.1.1"
